--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "gatsby-plugin-sharp": "^2.6.24",
     "gatsby-source-filesystem": "^2.3.23",
     "gatsby-transformer-sharp": "^2.5.12",
+    "graphql-hooks": "^4.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "reactstrap": "^8.5.1"
   },
   "devDependencies": {
     "prettier": "2.0.5"
