--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-source-filesystem": "^2.3.23",
     "gatsby-transformer-sharp": "^2.5.12",
     "graphql-hooks": "^4.5.0",
+    "netlify-cms": "^2.10.55",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
