--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,17 +2,16 @@ backend:
   name: git-gateway
   branch: master 
 
-media_folder: "src/images/uploads"
-public_folder: "/images/uploads"
+media_folder: static/assets
+public_folder: assets
 
 collections:
-  - name: "blog"
-    label: "blog"
-    folder: "static/admin/collections/blog"
+  - name: blog
+    label: Blog
+    folder: blog
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
-      - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - { name: path, label: Path }
+      - { name: date, label: Date, widget: datetime }
+      - { name: title, label: Title }
+      - { name: body, label: Body, widget: markdown }
