--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
-  name: git-gateway
-  branch: master 
+  name: github
+  branch: guiferrini/Default-Template 
 
 media_folder: static/assets
 public_folder: assets
